# langchain_tutorial

./: pyproject.toml
CH-1/: 1_LLM_Call.ipynb  2_Messages.ipynb  2_Structure_output.ipynb
