[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=1.2.17",
]
